# kore-2022

./: .gitignore  CMakeLists.txt  LICENSE  README.md  requirements.txt
agents/opponents/attacker/: README.md  main.py
agents/opponents/balanced/: README.md  main.py
agents/opponents/beta-1st-place/: README.md  logger.py
agents/opponents/beta-6th-place/: README.md  attack.py  build.py  defend.py  extra_helpers.py  main.py  mine.py
agents/opponents/do_nothing/: README.md  main.py
agents/opponents/miner/: README.md  main.py
agents/opponents/random/: README.md  main.py
agents/opponents/starter/: README.md
agents/v01/: main.cpp  main.py
agents/v01/core/: Action.cpp  Board.cpp  Board.h  Cell.h  CellMap.h  Configuration.h  Fleet.cpp  Fleet.h  FlightPlan.h
agents/v01/data/: convert-plans.txt
agents/v01/strategy/: FlightPlanDatabase.cpp  FlightPlanDatabase.h  State.cpp  State.h  Strategy.cpp  Strategy.h  StrategyComponent.cpp  StrategyComponent.h  Timer.h
agents/v01/strategy/components/: AttackFleetComponent.cpp  AttackFleetComponent.h  AttackShipyardComponent.cpp  AttackShipyardComponent.h  DefendComponent.cpp  DefendComponent.h  ExpandComponent.cpp  ExpandComponent.h  MineComponent.cpp  MineComponent.h  SpawnGreedyComponent.cpp  SpawnGreedyComponent.h  SpawnNormalComponent.cpp  SpawnNormalComponent.h
agents/v01/tests/: utilities.h
agents/v01/tests/core/: BoardTest.cpp  FlightPlanTest.cpp
agents/v01/tests/data/: 36310051.json  36857057.json  36857242.json  36857552.json  36857773.json  36857827.json
agents/v02/: main.cpp  main.py
agents/v02/core/: Action.h  Cell.cpp  CellMap.cpp  Direction.h  FlightPlan.cpp  Player.cpp  Player.h  Shipyard.cpp  Shipyard.h
agents/v02/strategy/: State.cpp  State.h  Strategy.cpp  Strategy.h  StrategyComponent.h  Timer.cpp
agents/v02/strategy/components/: MimicComponent.cpp  MimicComponent.h
agents/v02/tests/: benchmark.cpp  benchmark.py  utilities.h
agents/v02/tests/core/: ActionTest.cpp  BoardTest.cpp
agents/v02/tests/data/: 36854179.json  36857473.json  36857623.json  36858040.json
agents/v02/tests/strategy/components/: MimicComponentTest.cpp
scripts/: common.py  duplicate.py  generate_flight_plans.py  run.py  run_against_all.py  run_multiple.py
